# ROS2-Path-Automation-Using-C-

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/final_project/share/ament_index/resource_index/parent_prefix_path/: final_project
install/final_project/share/final_project/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/group11_final/share/ament_index/resource_index/package_run_dependencies/: group11_final
install/group11_final/share/group11_final/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/group11_final/share/group11_final/include/group11_final/: part_pose_listener.hpp
install/mage_msgs/share/mage_msgs/: local_setup.sh  package.sh
install/ros2_aruco/share/ros2_aruco/: package.sh
install/ros2_aruco_interfaces/share/ros2_aruco_interfaces/: package.sh
src/group11_final/: CMakeLists.txt  Readme.txt  package.xml
src/group11_final/config/: waypoint_params.yaml
src/group11_final/launch/: launch.py
src/group11_final/src/: part_pose_listener.cpp
