<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group11_final</name>
  <version>1.0.0</version>
  <description>This package creates a node that gets the pose of the parts and set them as waypoints for turtlebot3 to follow</description>
  <maintainer email="rrnitish@umd.edu">nitish</maintainer>
  <maintainer email="varunl11@umd.edu">varun</maintainer>
  <maintainer email="jagkrish@umd.edu">jagadeesh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>mage_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_aruco_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
